create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -11326,91 +11326,10 @@ body {
     margin: 0 0.5rem;
   }
 }
-.cid-r8UBz9twWF {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-r8UBz9twWF .row-links {
-  width: 100%;
-  justify-content: center;
-  -webkit-justify-content: center;
-}
-.cid-r8UBz9twWF .social-row {
-  width: 100%;
-  justify-content: center;
-  -webkit-justify-content: center;
-}
-.cid-r8UBz9twWF .media-container-row {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  -webkit-flex-direction: column;
-  -webkit-justify-content: center;
-  -webkit-align-items: center;
-}
-.cid-r8UBz9twWF .media-container-row .foot-menu {
-  list-style: none;
-  display: -webkit-flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 0;
-  margin-bottom: 0;
-  -webkit-justify-content: center;
-  -webkit-flex-wrap: wrap;
-}
-.cid-r8UBz9twWF .media-container-row .foot-menu li {
-  padding: 0 1rem 1rem 1rem;
-}
-.cid-r8UBz9twWF .media-container-row .foot-menu li p {
-  margin: 0;
-}
-.cid-r8UBz9twWF .media-container-row .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: -webkit-flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  -webkit-flex-wrap: wrap;
-}
-.cid-r8UBz9twWF .media-container-row .social-list .mbr-iconfont-social {
-  font-size: 1.5rem;
-  color: #ffffff;
-}
-.cid-r8UBz9twWF .media-container-row .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-r8UBz9twWF .media-container-row .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-r8UBz9twWF .media-container-row .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-r8UBz9twWF .media-container-row .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
-.cid-r8UBz9twWF .media-container-row .row-copirayt {
-  word-break: break-word;
-  width: 100%;
-}
-.cid-r8UBz9twWF .media-container-row .row-copirayt p {
-  width: 100%;
-}
-.cid-r8UBz9twWF .media-container-row .mbr-text {
-  color: #000000;
-}
 .cid-r8UDwKIur3 {
-  padding-top: 0px;
+  padding-top: 15px;
   padding-bottom: 0px;
-  background: linear-gradient(45deg, #ffffff, #ffffff);
+  background: linear-gradient(45deg, #1ea416, #1ea416);
 }
 .cid-r8UDwKIur3 .mbr-section-subtitle {
   font-style: italic;
@@ -11420,4 +11339,8 @@ body {
 .cid-r8UDwKIur3 .mbr-section-btn {
   color: #000000;
   text-align: center;
+}
+.cid-r8UDwKIur3 .mbr-section-title,
+.cid-r8UDwKIur3 .mbr-section-btn B {
+  color: #ffffff;
 }
