--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -11340,84 +11340,71 @@ body {
 .cid-r9j4kCZPzB H2 {
   color: #ffffff;
 }
-.cid-r9j53gWBwC {
-  padding-top: 75px;
-  padding-bottom: 75px;
+.cid-r9jcjC8Qfa {
+  background: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 0px;
+}
+.cid-r9jcjC8Qfa .image-block {
+  margin: auto;
+}
+.cid-r9jcjC8Qfa figcaption {
+  position: relative;
+}
+.cid-r9jcjC8Qfa figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-r9jcjC8Qfa .image-block {
+    width: 100% !important;
+  }
+}
+.cid-r9jck7GMxF {
+  padding-top: 45px;
+  padding-bottom: 60px;
   position: relative;
   background-color: #ffffff;
 }
-.cid-r9j53gWBwC p {
-  color: #767676;
-}
-.cid-r9j53gWBwC .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-r9j53gWBwC .toggle-content {
-  flex-basis: 100%;
-  -webkit-flex-basis: 100%;
-}
-.cid-r9j53gWBwC .card {
+.cid-r9jck7GMxF .card {
   border-radius: 0px;
   margin-bottom: -1px;
 }
-.cid-r9j53gWBwC .card .card-header {
+.cid-r9jck7GMxF .card .card-header {
   border-radius: 0px;
   border: 0px;
   padding: 0;
 }
-.cid-r9j53gWBwC .card .card-header a.panel-title {
+.cid-r9jck7GMxF .card .card-header a.panel-title {
   margin-bottom: 0;
-  margin-top: -1px;
-  font-weight: 500;
   font-style: normal;
+  font-weight: 500;
   display: block;
   text-decoration: none !important;
+  margin-top: -1px;
+  line-height: normal;
 }
-.cid-r9j53gWBwC .card .card-header a.panel-title:focus {
+.cid-r9jck7GMxF .card .card-header a.panel-title:focus {
   text-decoration: none !important;
 }
-.cid-r9j53gWBwC .card .card-header a.panel-title h4 {
-  border: 1px solid #dfdfdf;
+.cid-r9jck7GMxF .card .card-header a.panel-title h4 {
   padding: 1.3rem 2rem;
+  border: 1px solid #dfdfdf;
   margin-bottom: 0;
 }
-.cid-r9j53gWBwC .card .card-header a.panel-title h4 .sign {
+.cid-r9jck7GMxF .card .card-header a.panel-title h4 .sign {
   padding-right: 1rem;
 }
-.cid-r9j53gWBwC .mbr-figure {
-  align-self: flex-start;
-  -webkit-align-self: flex-start;
+.cid-r9jck7GMxF .card .panel-body {
+  color: #767676;
 }
-@media (max-width: 991px) {
-  .cid-r9j53gWBwC .mbr-figure {
-    padding-top: 2rem;
-    padding-top: 0;
-    padding-bottom: 2rem;
-  }
-  .cid-r9j53gWBwC .media-container-row {
-    -webkit-flex-direction: column-reverse;
-    flex-direction: column-reverse;
-  }
+.cid-r9jck7GMxF .panel-text {
+  color: #000000;
 }
-@media (min-width: 992px) {
-  .cid-r9j53gWBwC .mbr-figure {
-    padding-left: 4rem;
-    padding-left: 0;
-    padding-right: 4rem;
-  }
-  .cid-r9j53gWBwC .media-container-row {
-    -webkit-flex-direction: row-reverse;
-    flex-direction: row-reverse;
-  }
-}
-.cid-r9j53gWBwC H4 {
+.cid-r9jck7GMxF H4 {
   color: #000000;
   text-align: center;
-}
-.cid-r9j53gWBwC .panel-text {
-  text-align: left;
-  color: #000000;
 }
 .cid-r9j38sJxbl {
   padding-top: 30px;
@@ -11447,7 +11434,7 @@ body {
 }
 .cid-r9j4UK0BUW {
   padding-top: 45px;
-  padding-bottom: 45px;
+  padding-bottom: 60px;
   position: relative;
   background-color: #ffffff;
 }
