--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -11425,70 +11425,86 @@ body {
 .cid-r9j4kCZPzB H2 {
   color: #ffffff;
 }
-.cid-r9jcjC8Qfa {
-  background: #ffffff;
-  padding-top: 60px;
-  padding-bottom: 0px;
-}
-.cid-r9jcjC8Qfa .image-block {
-  margin: auto;
-}
-.cid-r9jcjC8Qfa figcaption {
-  position: relative;
-}
-.cid-r9jcjC8Qfa figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-r9jcjC8Qfa .image-block {
-    width: 100% !important;
-  }
-}
-.cid-r9jck7GMxF {
-  padding-top: 45px;
-  padding-bottom: 60px;
+.cid-r9pLqiOxc7 {
+  padding-top: 75px;
+  padding-bottom: 75px;
   position: relative;
   background-color: #ffffff;
 }
-.cid-r9jck7GMxF .card {
+.cid-r9pLqiOxc7 p {
+  color: #767676;
+}
+.cid-r9pLqiOxc7 .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-r9pLqiOxc7 .toggle-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-r9pLqiOxc7 .card {
   border-radius: 0px;
   margin-bottom: -1px;
 }
-.cid-r9jck7GMxF .card .card-header {
+.cid-r9pLqiOxc7 .card .card-header {
   border-radius: 0px;
   border: 0px;
   padding: 0;
 }
-.cid-r9jck7GMxF .card .card-header a.panel-title {
+.cid-r9pLqiOxc7 .card .card-header a.panel-title {
   margin-bottom: 0;
-  font-style: normal;
+  margin-top: -1px;
   font-weight: 500;
+  font-style: normal;
   display: block;
   text-decoration: none !important;
-  margin-top: -1px;
-  line-height: normal;
 }
-.cid-r9jck7GMxF .card .card-header a.panel-title:focus {
+.cid-r9pLqiOxc7 .card .card-header a.panel-title:focus {
   text-decoration: none !important;
 }
-.cid-r9jck7GMxF .card .card-header a.panel-title h4 {
-  padding: 1.3rem 2rem;
+.cid-r9pLqiOxc7 .card .card-header a.panel-title h4 {
   border: 1px solid #dfdfdf;
+  padding: 1.3rem 2rem;
   margin-bottom: 0;
 }
-.cid-r9jck7GMxF .card .card-header a.panel-title h4 .sign {
+.cid-r9pLqiOxc7 .card .card-header a.panel-title h4 .sign {
   padding-right: 1rem;
 }
-.cid-r9jck7GMxF .card .panel-body {
-  color: #767676;
+.cid-r9pLqiOxc7 .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
 }
-.cid-r9jck7GMxF .panel-text {
+@media (max-width: 991px) {
+  .cid-r9pLqiOxc7 .mbr-figure {
+    padding-top: 2rem;
+    padding-top: 0;
+    padding-bottom: 2rem;
+  }
+  .cid-r9pLqiOxc7 .media-container-row {
+    -webkit-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+  }
+}
+@media (min-width: 992px) {
+  .cid-r9pLqiOxc7 .mbr-figure {
+    padding-left: 4rem;
+    padding-left: 0;
+    padding-right: 4rem;
+  }
+  .cid-r9pLqiOxc7 .media-container-row {
+    -webkit-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+  }
+}
+.cid-r9pLqiOxc7 H4 {
+  color: #000000;
+  text-align: center;
+}
+.cid-r9pLqiOxc7 .panel-text {
+  text-align: left;
   color: #000000;
 }
-.cid-r9jck7GMxF H4 {
-  color: #000000;
+.cid-r9pLqiOxc7 H2 {
   text-align: center;
 }
 .cid-r6KAjJ3ZSX {
