create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2061,65 +2061,6 @@ body {
   padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-r6yc1KUhGy {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #1ea416;
-}
-.cid-r6yc1KUhGy H2 {
-  color: #ffffff;
-}
-.cid-r6zsaNdbfj {
-  padding-top: 60px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-r6zsaNdbfj .mbr-text,
-.cid-r6zsaNdbfj blockquote {
-  color: #767676;
-}
-.cid-r6zsaNdbfj .mbr-text B {
-  color: #000000;
-}
-.cid-r6zsaNdbfj .mbr-text {
-  color: #000000;
-}
-.cid-r6gDMObQHM {
-  padding-top: 0px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-r6gDMObQHM .title {
-  margin-bottom: 2rem;
-}
-.cid-r6gDMObQHM .mbr-section-subtitle {
-  color: #000000;
-}
-.cid-r6gDMObQHM a:not([href]):not([tabindex]) {
-  color: #fff;
-  border-radius: 3px;
-}
-.cid-r6gDMObQHM a.btn-white:not([href]):not([tabindex]) {
-  color: #333;
-}
-.cid-r6gDMObQHM .multi-horizontal {
-  flex-grow: 1;
-  -webkit-flex-grow: 1;
-  max-width: 100%;
-}
-.cid-r6gDMObQHM .input-group-btn {
-  display: block;
-  text-align: center;
-}
-.cid-r6gDMObQHM LABEL {
-  color: #000000;
-}
-.cid-r6gDMObQHM H2 {
-  color: #000000;
-}
-.cid-r6gDMObQHM B {
-  color: #000000;
-}
 .cid-raUAmsAs1d {
   padding-top: 30px;
   padding-bottom: 0px;
@@ -2128,23 +2069,25 @@ body {
 .cid-raUAmsAs1d H2 {
   color: #ffffff;
 }
-.cid-raUACeD2Zn {
+.cid-raUCnThbjW {
   padding-top: 45px;
-  padding-bottom: 15px;
-  background: linear-gradient(45deg, #ffffff, #ffffff);
+  padding-bottom: 30px;
+  background-color: #ffffff;
 }
-.cid-raUACeD2Zn .mbr-section-subtitle {
-  font-style: italic;
-  letter-spacing: 1rem;
+.cid-raUCnThbjW .mbr-text,
+.cid-raUCnThbjW blockquote {
+  color: #767676;
 }
-.cid-raUACeD2Zn .mbr-section-title,
-.cid-raUACeD2Zn .mbr-section-btn {
+.cid-raUCnThbjW .mbr-text B {
+  color: #000000;
+}
+.cid-raUCnThbjW .mbr-text {
   color: #000000;
   text-align: center;
 }
 .cid-raUABne4Zh {
   padding-top: 0px;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
 .cid-raUABne4Zh .mbr-section-subtitle {
@@ -2245,6 +2188,65 @@ body {
   padding-top: 0px;
   padding-bottom: 60px;
   background-color: #ffffff;
+}
+.cid-r6yc1KUhGy {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6yc1KUhGy H2 {
+  color: #ffffff;
+}
+.cid-r6zsaNdbfj {
+  padding-top: 60px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-r6zsaNdbfj .mbr-text,
+.cid-r6zsaNdbfj blockquote {
+  color: #767676;
+}
+.cid-r6zsaNdbfj .mbr-text B {
+  color: #000000;
+}
+.cid-r6zsaNdbfj .mbr-text {
+  color: #000000;
+}
+.cid-r6gDMObQHM {
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-r6gDMObQHM .title {
+  margin-bottom: 2rem;
+}
+.cid-r6gDMObQHM .mbr-section-subtitle {
+  color: #000000;
+}
+.cid-r6gDMObQHM a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-r6gDMObQHM a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-r6gDMObQHM .multi-horizontal {
+  flex-grow: 1;
+  -webkit-flex-grow: 1;
+  max-width: 100%;
+}
+.cid-r6gDMObQHM .input-group-btn {
+  display: block;
+  text-align: center;
+}
+.cid-r6gDMObQHM LABEL {
+  color: #000000;
+}
+.cid-r6gDMObQHM H2 {
+  color: #000000;
+}
+.cid-r6gDMObQHM B {
+  color: #000000;
 }
 .cid-r6KAjJ3ZSX {
   padding-top: 30px;
