--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -11948,6 +11948,386 @@ body {
   color: #000000;
   text-align: center;
 }
+.cid-raUZ6Im2dF {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-raUZ6Im2dF H2 {
+  color: #ffffff;
+}
+.cid-raUZ7VVbiu {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-raUZ7VVbiu .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-raUZ7VVbiu .number-wrap {
+  color: #000000;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-raUZ7VVbiu .number {
+  font-style: normal;
+  font-weight: 700;
+  text-transform: none;
+  letter-spacing: -2px;
+  font-size: 55px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #1ea416;
+}
+.cid-raUZ7VVbiu .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-raUZ7VVbiu .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  font-size: 55px;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #1ea416;
+}
+.cid-raUZ7VVbiu .countdown-cont {
+  background: linear-gradient(45deg, #ffffff, #ffffff);
+  max-width: 700px;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-raUZ7VVbiu .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-raUZ7VVbiu .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-raUZ7VVbiu .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .cid-raUZ7VVbiu .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-raUZ7VVbiu .number,
+  .cid-raUZ7VVbiu .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-raUZ7VVbiu .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-raUZ7VVbiu H4 {
+  color: #000000;
+  text-align: center;
+}
+.cid-raUWXeYsdn {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-raUWXeYsdn .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-raUWXeYsdn .number-wrap {
+  color: #000000;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-raUWXeYsdn .number {
+  font-style: normal;
+  font-weight: 700;
+  text-transform: none;
+  letter-spacing: -2px;
+  font-size: 55px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #1ea416;
+}
+.cid-raUWXeYsdn .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-raUWXeYsdn .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  font-size: 55px;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #1ea416;
+}
+.cid-raUWXeYsdn .countdown-cont {
+  background: linear-gradient(45deg, #ffffff, #ffffff);
+  max-width: 700px;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-raUWXeYsdn .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-raUWXeYsdn .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-raUWXeYsdn .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .cid-raUWXeYsdn .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-raUWXeYsdn .number,
+  .cid-raUWXeYsdn .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-raUWXeYsdn .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-raUWXeYsdn H4 {
+  color: #000000;
+  text-align: center;
+}
+.cid-raUY0povvo {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-raUY0povvo .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-raUY0povvo .number-wrap {
+  color: #000000;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-raUY0povvo .number {
+  font-style: normal;
+  font-weight: 700;
+  text-transform: none;
+  letter-spacing: -2px;
+  font-size: 55px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #1ea416;
+}
+.cid-raUY0povvo .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-raUY0povvo .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  font-size: 55px;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #1ea416;
+}
+.cid-raUY0povvo .countdown-cont {
+  background: linear-gradient(45deg, #ffffff, #ffffff);
+  max-width: 700px;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-raUY0povvo .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-raUY0povvo .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-raUY0povvo .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .cid-raUY0povvo .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-raUY0povvo .number,
+  .cid-raUY0povvo .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-raUY0povvo .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-raUY0povvo H4 {
+  color: #000000;
+  text-align: center;
+}
+.cid-raUXiPvSLG {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-raUXiPvSLG .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-raUXiPvSLG .number-wrap {
+  color: #000000;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-raUXiPvSLG .number {
+  font-style: normal;
+  font-weight: 700;
+  text-transform: none;
+  letter-spacing: -2px;
+  font-size: 55px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #1ea416;
+}
+.cid-raUXiPvSLG .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-raUXiPvSLG .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  font-size: 55px;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #1ea416;
+}
+.cid-raUXiPvSLG .countdown-cont {
+  background: linear-gradient(45deg, #ffffff, #ffffff);
+  max-width: 700px;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-raUXiPvSLG .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-raUXiPvSLG .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-raUXiPvSLG .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .cid-raUXiPvSLG .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-raUXiPvSLG .number,
+  .cid-raUXiPvSLG .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-raUXiPvSLG .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-raUXiPvSLG H4 {
+  color: #000000;
+  text-align: center;
+}
 .cid-r6KAjJ3ZSX {
   padding-top: 30px;
   padding-bottom: 30px;
